fix: scroll issues and low contrast

--- a/client/main.css
+++ b/client/main.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 html {
-  font-family: sans-serif;
   height: 100%;
   width: 100%;
   background: linear-gradient(90deg, #A1FFCE, #FAFFD1);
@@ -14,5 +13,14 @@ body {
   margin: auto;
   background-color: rgba(119, 112, 112, 0.4);
   border-radius: 7%;
-  font-family: 'Bebas Neue', cursive;
+  color: #1F2937
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
